# BaGE

./: CMakeLists.txt  README.md  snek.lua
include/: Engine.h  Font.h  Texture.h  luaaa.h
src/: Engine.cpp  Font.cpp  Texture.cpp  main.cpp
